fix(styles): redo z-index values

--- a/app/components/assets/assets.module.css
+++ b/app/components/assets/assets.module.css
@@ -8,7 +8,7 @@
 .LogoIcon {
   cursor: pointer;
   width: 25px;
-  z-index: 100;
+  z-index: 50;
   height: 25px;
   display: flex;
   justify-content: center;
@@ -23,7 +23,7 @@
   display: block;
 }
 .LogoText {
-  z-index: 200;
+  z-index: 55;
   cursor: pointer;
   color: #6aa7e8;
   font-weight: 700;
