--- a/app/components/ui/Banner/Banner.module.css
+++ b/app/components/ui/Banner/Banner.module.css
@@ -1,7 +1,6 @@
 .banner {
   position: sticky;
   top: 0;
-  z-index: 1000;
   display: flex;
   align-items: center;
   justify-content: space-between;
