--- a/app/layout.module.css
+++ b/app/layout.module.css
@@ -8,7 +8,7 @@
 /* NAVBAR */
 
 .logo {
-  z-index: 200;
+  z-index: 55;
   color: var(--accent);
   max-width: 100px;
 }
@@ -74,7 +74,7 @@
   align-self: flex-start;
   box-shadow: var(--box-shadow);
   margin-top: 35px;
-  z-index: 200;
+  z-index: 55;
   border-radius: var(--border2);
   padding: 0px;
   overflow: hidden;
@@ -241,7 +241,7 @@
     display: flex;
   }
   .burgerMenu {
-    z-index: 200;
+    z-index: 55;
     padding: 10px 20px;
     display: flex;
     justify-content: center;
